1999-12-20  Katsumi Yamaoka   <yamaoka@jpl.org>

	* mel-b-el.el (base64-encode-string): Allow the optional second arg
	`no-line-break'.

1999-12-13  Katsumi Yamaoka   <yamaoka@jpl.org>

	* README.en,README.ja,mime-en.sgml,mime-en.texi,mime-ja.sgml,
	mime-ja.texi: Update for the recent ML address and ftp site.

1999-09-28   Daiki Ueno  <ueno@ueda.info.waseda.ac.jp>

	* Sync up to flim-1_13_2 from flim-1_12_7.

	* mime-def.el (mime-library-product): Bump up to FLAM-DOODLE
	1.13.0.

	* Makefile (package): Load FLIM-MK.
	(install-package): Ditto.

1999-06-02  Tanaka Akira      <akr@jaist.ac.jp>

	* Sync up to flim-1_12_7 from flim-1_12_5.

	* mime-def.el (mime-library-product): Bump up to FLAM-DOODLE
	1.12.6.

1999-05-26  Tanaka Akira  <akr@jaist.ac.jp>

	* TESTPAT: Does not treat =?= as encoded-word.

	* ew-unit.el (ew-eword-p): Use `ew-anchored-encoded-word-regexp' to
	test.

1999-05-24  Tanaka Akira  <akr@jaist.ac.jp>

	* TESTPAT-DOODLE: New file.

	* TESTPAT-FLIM: New file.

	* TESTPAT: Re-constructed.

	* Makefile (check): Use TESTPAT-DOODLE.
	(check-verbose): New target.

1999-03-27  Tanaka Akira      <akr@jaist.ac.jp>

	* mime-def.el (mime-library-product): Bump up to FLAM-DOODLE
	1.12.5.

1999-03-09  Tanaka Akira      <akr@jaist.ac.jp>

	* digraph.el (digraph-saf-dfs): Use implicit control stack.

1999-03-09  Tanaka Akira      <akr@jaist.ac.jp>

	* digraph.el: Refined.

	* automata.el (automata): Adopted to above.

1999-03-04  Tanaka Akira      <akr@jaist.ac.jp>

	* mel.el (mime-decode-string): Return `string' itself if
	`encoding' is unknown.

1999-02-26  Tanaka Akira      <akr@jaist.ac.jp>

	* mime-def.el (mime-library-product): Bump up to FLAM-DOODLE
	1.12.4.

1999-02-24  Tanaka Akira      <akr@jaist.ac.jp>

	* eword-decode.el (eword-analyze-sticked-encoded-word): New variable.
	(eword-analyze-atom): Check `eword-analyze-sticked-encoded-word'.

1999-02-22  Tanaka Akira      <akr@jaist.ac.jp>
